更新 convert()实现